--- a/src/app/shared/spinner-overlay/spinner-overlay.component.html
+++ b/src/app/shared/spinner-overlay/spinner-overlay.component.html
@@ -1,15 +1,5 @@
-<!-- spinner-overlay.component.html -->
-<!-- <div class="fixed inset-0 z-50 flex items-center justify-center bg-white/70 dark:bg-gray-900/70">
-  <div
-    class="animate-spin inline-block size-8 border-3 border-blue-600 border-t-transparent rounded-full"
-    role="status"
-    aria-label="Cargando">
-    <span class="sr-only">Cargando...</span>
-  </div>
-</div> -->
-<!-- spinner-overlay.component.html -->
 <div class="fixed inset-0 z-50 flex items-center justify-center -mt-40 bg-white/70 dark:bg-gray-900/70">
-  <div class="flex gap-1 font_outfit text-[24px] font-semibold text-[#5a4ef3]">
+  <div class="flex gap-1 font_outfit text-[24px] font-semibold text-[#5a4ef3] dark:text-[#A78BFA]">
     <div class="flex edu outfit">
       <span class="letter">e</span>
       <span class="letter">d</span>
@@ -24,4 +14,3 @@
     </div>
   </div>
 </div>
-
