--- a/src/app/layout/private-layout/private-layout.component.html
+++ b/src/app/layout/private-layout/private-layout.component.html
@@ -157,6 +157,26 @@ md:block md:translate-x-0 md:end-auto md:bottom-0" role="dialog" tabindex="-1" a
               class="truncate hs-overlay-minified:opacity-0 transition-all duration-500 ease-out opacity-100 group-hover:translate-x-1">Escuelas</span>
           </a>
         </li>
+        <li>
+          <a routerLink="/administracion/gestion-elecciones" routerLinkActive="active"
+            class="group relative w-full flex items-center gap-3 pl-8 hs-overlay-minified:pl-2.5 py-2 px-2 outfit-2 text-[#9897C9] dark:text-[#A78BFA] rounded-lg before:absolute before:top-1/2 before:-start-2.5 before:rounded-e-full before:w-[4px] before:h-6 before:-translate-y-1/2 before:bg-[#5956e9] dark:before:bg-[#A78BFA] before:opacity-0 before:transition-all before:duration-300 hover:before:opacity-100 transition-all duration-300 ease-out hover:translate-x-1 hover:bg-[#f9f9fe] dark:hover:bg-[#443a52]">
+            <span
+              class="-ms-[5px] flex shrink-0 justify-center items-center size-5 transition-all duration-300 group-hover:scale-110 group-hover:text-[#5956e9] dark:group-hover:text-[#A78BFA]">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                <path fill="currentColor" fill-rule="evenodd"
+                  d="M13.463 21.674a3.45 3.45 0 0 1-2.926 0C6.553 19.812 4 14.606 4 10.144C4 5.645 7.582 2 12 2s8 3.646 8 8.143c0 4.462-2.553 9.67-6.537 11.531M10.967 5.932a3.03 3.03 0 0 1 2.066 0l2.342.855c.541.198.875.68.875 1.213s-.334 1.015-.875 1.213l-.125.045V11.7c0 .673-.394 1.329-1.08 1.582c-.526.194-1.391.468-2.17.468s-1.644-.274-2.17-.468c-.686-.253-1.08-.909-1.08-1.582V9.258l-.125-.045C8.084 9.015 7.75 8.533 7.75 8s.334-1.015.875-1.213z"
+                  clip-rule="evenodd" />
+                <path fill="currentColor" fill-rule="evenodd"
+                  d="M11.481 7.34a1.53 1.53 0 0 1 1.038 0l1.804.66l-1.804.66a1.53 1.53 0 0 1-1.038 0L9.677 8z"
+                  clip-rule="evenodd" />
+                <path fill="currentColor"
+                  d="M10.25 11.7V9.806l.717.262a3.03 3.03 0 0 0 2.066 0l.717-.262V11.7c0 .105-.057.159-.1.175c-.501.185-1.154.375-1.65.375s-1.149-.19-1.65-.375c-.043-.016-.1-.07-.1-.175" />
+              </svg>
+            </span>
+            <span
+              class="truncate hs-overlay-minified:opacity-0 transition-all duration-500 ease-out opacity-100 group-hover:translate-x-1">Elecciones</span>
+          </a>
+        </li>
 
         }
         @if (currentUser()?.rol === 'Empleado') {
@@ -177,9 +197,7 @@ md:block md:translate-x-0 md:end-auto md:bottom-0" role="dialog" tabindex="-1" a
         <li>
           <a routerLink="/administracion/calendario" routerLinkActive="active"
             class="group relative w-full flex items-center gap-3 pl-8 hs-overlay-minified:pl-2.5 py-2 px-2 outfit-2 text-[#9897C9] dark:text-[#A78BFA] rounded-lg before:absolute before:top-1/2 before:-start-2.5 before:rounded-e-full before:w-[4px] before:h-6 before:-translate-y-1/2 before:bg-[#5956e9] dark:before:bg-[#A78BFA] before:opacity-0 before:transition-opacity before:duration-300 hover:before:opacity-100">
-            <span class="-ms-[5px] flex shrink-0 justify-center items-center size-5">
-              <svg class="size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="18" height="18" x="3" y="4" rx="2" ry="2"/><line x1="16" x2="16" y1="2" y2="6"/><line x1="8" x2="8" y1="2" y2="6"/><line x1="3" x2="21" y1="10" y2="10"/><path d="M8 14h.01"/><path d="M12 14h.01"/><path d="M16 14h.01"/><path d="M8 18h.01"/><path d="M12 18h.01"/><path d="M16 18h.01"/></svg>
-            </span>
+            <svg class="-ms-[5px] flex shrink-0 justify-center items-center size-5 transition-all duration-300 group-hover:scale-110 group-hover:text-[#5956e9] dark:group-hover:text-[#A78BFA]" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512"><path fill="currentColor" d="M480 128a64 64 0 0 0-64-64h-16V48.45c0-8.61-6.62-16-15.23-16.43A16 16 0 0 0 368 48v16H144V48.45c0-8.61-6.62-16-15.23-16.43A16 16 0 0 0 112 48v16H96a64 64 0 0 0-64 64v12a4 4 0 0 0 4 4h440a4 4 0 0 0 4-4ZM32 416a64 64 0 0 0 64 64h320a64 64 0 0 0 64-64V179a3 3 0 0 0-3-3H35a3 3 0 0 0-3 3Zm344-208a24 24 0 1 1-24 24a24 24 0 0 1 24-24m0 80a24 24 0 1 1-24 24a24 24 0 0 1 24-24m-80-80a24 24 0 1 1-24 24a24 24 0 0 1 24-24m0 80a24 24 0 1 1-24 24a24 24 0 0 1 24-24m0 80a24 24 0 1 1-24 24a24 24 0 0 1 24-24m-80-80a24 24 0 1 1-24 24a24 24 0 0 1 24-24m0 80a24 24 0 1 1-24 24a24 24 0 0 1 24-24m-80-80a24 24 0 1 1-24 24a24 24 0 0 1 24-24m0 80a24 24 0 1 1-24 24a24 24 0 0 1 24-24"/></svg>
             <span class="truncate hs-overlay-minified:opacity-0 transition-opacity duration-300">Calendario</span>
           </a>
         </li>
